--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="team_label">Team</string>
     <string name="description_illustrative_icon_for_error">Illustrative icon for error</string>
     <string name="retry_label">Retry</string>
+    <string name="retry_button">Retry</string>
 </resources>
