--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,58 +1,66 @@
 <resources>
+    <!--  App  -->
     <string name="app_name">NbaApp</string>
-    <string name="title_home">Home</string>
-    <string name="title_players">Players</string>
-    <string name="description_back">Back</string>
-    <string name="conference_label">Conference</string>
-    <string name="city_label">City</string>
-    <string name="name_label">Name</string>
-    <string name="z_a_label">Z - A</string>
-    <string name="title_order">Order</string>
-    <string name="apply_text">Apply</string>
-    <string name="sort_by_title">Sort by</string>
-    <string name="a_z_label">A - Z</string>
-    <string name="players_title">Players</string>
-    <string name="search_title">Search</string>
-    <string name="home_title">Home</string>
-    <string name="visitor_name_label">Visitor Name</string>
-    <string name="visitor_score_label">Visitor Score</string>
-    <string name="home_name_label">Home Name</string>
-    <string name="home_score_label">Home Score</string>
-    <string name="description_enter">Enter</string>
-    <string name="first_name_label">First Name</string>
-    <string name="last_name_label">Last Name</string>
-    <string name="team_label">Team</string>
-    <string name="description_illustrative_icon_for_error">Illustrative icon for error</string>
-    <string name="retry_label">Retry</string>
-    <string name="retry_button">Retry</string>
 
+    <!--  Descriptive Static Text  -->
+    <string name="label_team">Team</string>
+    <string name="label_conference">Conference</string>
+    <string name="label_city">City</string>
+    <string name="label_name">Name</string>
+    <string name="label_z_a">Z - A</string>
+    <string name="label_a_z">A - Z</string>
+    <string name="label_visitor_name">Visitor Name</string>
+    <string name="label_visitor_score">Visitor Score</string>
+    <string name="label_home_name">Home Name</string>
+    <string name="label_home_score">Home Score</string>
+    <string name="label_first_name">First Name</string>
+    <string name="label_last_name">Last Name</string>
+    <string name="label_retry">Retry</string>
     <string name="label_sort_by_name">Name</string>
     <string name="label_sort_by_city">City</string>
     <string name="label_sort_by_conference">Conference</string>
 
+    <!--  Actions  -->
+    <string name="action_retry">Retry</string>
+    <string name="action_apply">Apply</string>
+
+    <!--  Titles  -->
+    <string name="title_home">Home</string>
+    <string name="title_players">Players</string>
+    <string name="title_order">Order</string>
+    <string name="title_sort_by">Sort by</string>
+    <string name="title_search">Search</string>
+
     <!-- Remote errors -->
-    <string name="error_no_internet">No internet connection</string>
-    <string name="error_request_timeout">Request timed out</string>
-    <string name="error_bad_request">Bad request</string>
-    <string name="error_not_found">Resource not found</string>
-    <string name="error_not_acceptable">Request not acceptable</string>
-    <string name="error_conflict">Conflict in request</string>
-    <string name="error_payload_too_large">Payload too large</string>
-    <string name="error_unsupported_media_type">Unsupported media type</string>
-    <string name="error_too_many_requests">Too many requests</string>
-    <string name="error_internal_server">Internal server error</string>
-    <string name="error_bad_gateway">Bad gateway</string>
-    <string name="error_service_unavailable">Service unavailable</string>
-    <string name="error_gateway_timeout">Gateway timeout</string>
-    <string name="error_ssl_handshake">SSL handshake failed</string>
-    <string name="error_no_data">No data available</string>
-    <string name="error_unknown">Unknown error</string>
-    <string name="error_unauthorized">You are not authorized</string>
-    <string name="error_forbidden">Access forbidden</string>
+    <string name="error_no_internet">No internet connection.</string>
+    <string name="error_request_timeout">Request timed out.</string>
+    <string name="error_bad_request">Bad request.</string>
+    <string name="error_not_found">Resource not found.</string>
+    <string name="error_not_acceptable">Request not acceptable.</string>
+    <string name="error_conflict">Conflict in request.</string>
+    <string name="error_payload_too_large">Payload too large.</string>
+    <string name="error_unsupported_media_type">Unsupported media type.</string>
+    <string name="error_too_many_requests">Too many requests.</string>
+    <string name="error_internal_server">Internal server error.</string>
+    <string name="error_bad_gateway">Bad gateway.</string>
+    <string name="error_service_unavailable">Service unavailable.</string>
+    <string name="error_gateway_timeout">Gateway timeout.</string>
+    <string name="error_ssl_handshake">SSL handshake failed.</string>
+    <string name="error_no_data">No data available.</string>
+    <string name="error_unknown">Unknown error.</string>
+    <string name="error_unauthorized">You are not authorized.</string>
+    <string name="error_forbidden">Access forbidden.</string>
 
     <!-- Local errors -->
     <string name="error_disk_full">Not enough storage space</string>
     <string name="error_db_corrupted">Database corrupted</string>
     <string name="error_cache_expired">Cache expired</string>
 
+    <!--  Helpers  -->
+    <string name="combined_msg_offline_mode">%1$s. Showing saved results</string>
+
+    <!--  Accessibility Descriptions  -->
+    <string name="desc_back_button">Back</string>
+    <string name="desc_error_icon">Illustrative icon for error</string>
+    <string name="desc_enter">Enter</string>
 </resources>
